hphp/test/zend/good/Zend/tests/ns_071.php.expectf
NULL

Catchable fatal error: Argument 1 passed to foo\bar::__construct() must be an instance of HH\AnyArray, stdClass given in %s/ns_071.php on line 12
